fix: overlap image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,3 +86,6 @@ footer {
   color: #0095fd;
   /* color: rgb(0, 55, 255); */
 }
+.fs-5 {
+  font-size: 1.1rem !important;
+}
